2006-07-07  Rodney Dawes  <dobey@novell.com>

	* 48x48/emblems/Makefile.am: Don't run the mapping script here, this
	folder is going away soon, and has old names anyway

	* scalable/emblems/Makefile.am: Depend on both the SVG files and icon
	files being installed here, for the mapping rule

2006-07-07  Jakub Steiner <jimmac@ximian.com>

	* 48x48/emblems/Makefile.am:
	* scalable/emblems/Makefile.am: fixes #346870

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 16x16/emblems/Makefile.am:
	* 22x22/emblems/Makefile.am: 
	* 24x24/emblems/Makefile.am: 
	* 32x32/emblems/Makefile.am: 
	* 48x48/emblems/Makefile.am: 
	* scalable/emblems/Makefile.am: not really knowing what I'm doing,
	but mimicking how the file looks elsewhere. Won't build otherwise
	for me, complaining about missing target `install-iconsDATA'.

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 48x48/emblems/emblem-symbolic-link: removed the old style link
		(is a scalable now).
	
2006-07-06  Rodney Dawes  <dobey@novell.com>

	* scalable/places/Makefile.am:
	* scalable/places/folder-remote.icon:
	Add folder-remote.icon to specify emblem placement to match that
	of the standard folder icon

	Bug #309113

2006-07-06  Rodney Dawes  <dobey@novell.com>

	* 24x24/apps/Makefile.am:
	* 48x48/apps/Makefile.am:
	Update for removed icons

	* scalable/emblems/Makefile.am:
	Add emblem-symbolic-link back now that it exists

2006-07-06  Rodney Dawes  <dobey@novell.com>

        * */apps/beep-media-player.*:
        * */apps/burner.*:
        Remove these icons

        * 24x24/apps/gnome-shutdown.xcf.bz2:
        This 24x24 icon is generated from the 22x22 now

        * 48x48/apps/file-roller.*:
        Don't need to ship the same icon as the app, in the theme, and the
        icon should be shipped with the app anyway

2006-07-06  Jakub Steiner <jimmac@ximian.com>

	* 24x24/mimetypes/application-x-executable.png,
	scalable/emblems/emblem-symbolic-link.svg,
	scalable/status/dialog-info.svg: missed these files
