@@ -1,0 +1,5 @@
+SUBDIRS = 		\
+	emblems
+
+MAINTAINERCLEANFILES =	\
+	Makefile.in
