@@ -1,0 +1,17 @@
+NULL=
+
+size = 8x8
+context = emblems
+iconsdir = $(themedir)/$(size)/$(context)
+
+icons_DATA =				\
+	emblem-symbolic-link.png	\
+	$(NULL)
+
+EXTRA_DIST = $(icons_DATA)
+
+MAINTAINERCLEANFILES =			\
+	Makefile.in
+
+install-data-local: install-iconsDATA
+	(cd $(DESTDIR)$(themedir)/$(size) && $(ICONMAP) -c $(context))
